--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ a:hover{
             </nav>
         </header>
 
-        <section class="bg-white p-8 rounded-lg shadow-md flex flex-col md:flex-row">
+        <section class="bg-white p-8 rounded-lg shadow-md flex flex-col md:flex-row mb-8">
             <div class="md:w-1/2 mb-4 md:mb-0">
                 <h1 class="text-3xl font-bold mb-4">Beading your imaginations into reality</h1>
                 <p>Welcome to our margical little shop! We are open on Mondays to Saturdays. Located at 3890 Lapi street. Please make an appointment for our jewellery experinces
@@ -176,7 +176,7 @@ a:hover{
             </div>
         </section>
 
-        <section class="flex justify-around my-8">
+        <section class="flex justify-around mb-8">
             <div class="text-center">
                 <h2 class="text-2xl font-bold">95%</h2>
                 <p class="text-gray-600">Success rate</p>
@@ -194,7 +194,7 @@ a:hover{
                 <p class="text-gray-600">Satisfaction</p>
             </div>
         </section>
-
+        <div class="h-screen"></div>
         <section class="bg-white p-8 rounded-lg shadow-md mb-8">
             <h2 class="text-2xl font-bold mb-4">Our Best Services</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
