--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ a:hover{
             </div>
         </section>
 
-        <section class="flex justify-around mb-8">
+        <section class="flex justify-around mb-8" style="height: 30%; padding-top:75px;">
             <div class="text-center">
                 <h2 class="text-2xl font-bold">95%</h2>
                 <p class="text-gray-600">Success rate</p>
