--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ a:hover{
     <div class="container mx-auto p-4">       
         <header class="flex justify-between items-center py-4">
             <div class="text-2xl font-bold"><img src="log.png" alt="logo"  width="150" height="50" role="img">senieBeading Hub</div>
-            <nav class="space-x-4">
+            <nav class="flex-1 text-centre space-x-4">
                 <a href="#" class="text-gray-600">Home</a>
                 <a href="about.html" class="text-gray-600">About</a>
                 <a href="services.html" class="text-gray-600">Services</a>
@@ -176,7 +176,7 @@ a:hover{
             </div>
         </section>
 
-        <section class="flex justify-around mb-8" style="height: 10%; padding-top:75px;">
+        <section class="flex justify-around mb-8" style="height: 30%; padding-top:75px;">
             <div class="text-center">
                 <h2 class="text-2xl font-bold">95%</h2>
                 <p class="text-gray-600">Success rate</p>
