--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ a:hover{
                     <button class="bg-black text-white px-4 py-2 rounded">Sign Up</button>
                 </div>
                 <div class="flex space-x-4">
-                    <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded"><a href="istockphoto-1289234307-640_adpp_is.mp4">Watch Video</a></button>
+                    <button class="bg-gray-200 text-gray-600 px-4 py-2 rounded">Watch Video</button>
                     <button id="orderNowButton" class="bg-black text-white px-4 py-2 rounded">Order Now</button>
                 </div>
             </div>
